fix: add elipsis to text (#1356)
* fix: add elipsis to text

* fix: truncate lines and add elipsis

* fix: lints

--- a/src/styles/tailwind.styles.css
+++ b/src/styles/tailwind.styles.css
@@ -625,6 +625,10 @@ html,
   left: 50% !important;
 }
 
+.right-0 {
+  right: 0px !important;
+}
+
 .top-0 {
   top: 0px !important;
 }
@@ -635,10 +639,6 @@ html,
 
 .top-\[60px\] {
   top: 60px !important;
-}
-
-.right-0 {
-  right: 0px !important;
 }
 
 .z-10 {
@@ -846,12 +846,15 @@ html,
   margin-top: 40px !important;
 }
 
-.box-border {
-  box-sizing: border-box !important;
-}
-
 .box-content {
   box-sizing: content-box !important;
+}
+
+.line-clamp-3 {
+  overflow: hidden !important;
+  display: -webkit-box !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-line-clamp: 3 !important;
 }
 
 .block {
@@ -982,18 +985,6 @@ html,
   height: 100vh !important;
 }
 
-.h-2 {
-  height: 0.5rem !important;
-}
-
-.h-3 {
-  height: 0.75rem !important;
-}
-
-.h-\[500px\] {
-  height: 500px !important;
-}
-
 .max-h-\[150px\] {
   max-height: 150px !important;
 }
@@ -1002,16 +993,12 @@ html,
   max-height: 300px !important;
 }
 
-.max-h-full {
-  max-height: 100% !important;
-}
-
-.max-h-\[3rem\] {
-  max-height: 3rem !important;
-}
-
 .max-h-\[4rem\] {
   max-height: 4rem !important;
+}
+
+.max-h-full {
+  max-height: 100% !important;
 }
 
 .min-h-\[48px\] {
@@ -1114,18 +1101,6 @@ html,
   width: 100% !important;
 }
 
-.w-2 {
-  width: 0.5rem !important;
-}
-
-.w-3 {
-  width: 0.75rem !important;
-}
-
-.w-\[500px\] {
-  width: 500px !important;
-}
-
 .min-w-1\/2 {
   min-width: 50% !important;
 }
@@ -1142,17 +1117,20 @@ html,
   min-width: 90% !important;
 }
 
-.min-w-max {
-  min-width: -moz-max-content !important;
-  min-width: max-content !important;
-}
-
-.min-w-\[200px\] {
-  min-width: 200px !important;
+.max-w-2xl {
+  max-width: 42rem !important;
 }
 
 .max-w-\[100px\] {
   max-width: 100px !important;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px !important;
+}
+
+.max-w-md {
+  max-width: 28rem !important;
 }
 
 .max-w-sm {
@@ -1161,26 +1139,6 @@ html,
 
 .max-w-xs {
   max-width: 20rem !important;
-}
-
-.max-w-md {
-  max-width: 28rem !important;
-}
-
-.max-w-\[200px\] {
-  max-width: 200px !important;
-}
-
-.max-w-lg {
-  max-width: 32rem !important;
-}
-
-.max-w-xl {
-  max-width: 36rem !important;
-}
-
-.max-w-2xl {
-  max-width: 42rem !important;
 }
 
 .flex-1 {
@@ -1584,11 +1542,6 @@ html,
   border-color: rgb(255 255 255 / var(--tw-border-opacity)) !important;
 }
 
-.border-gray-50 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(249 250 251 / var(--tw-border-opacity)) !important;
-}
-
 .border-b-dark-blue-10 {
   border-bottom-color: var(--dark-blue-10) !important;
 }
@@ -1800,10 +1753,6 @@ html,
 
 .p-\[5px\] {
   padding: 5px !important;
-}
-
-.p-8 {
-  padding: 2rem !important;
 }
 
 .px-0 {
@@ -2244,14 +2193,6 @@ html,
 
 .outline {
   outline-style: solid !important;
-}
-
-.outline-dotted {
-  outline-style: dotted !important;
-}
-
-.outline-double {
-  outline-style: double !important;
 }
 
 .outline-dark-blue-20 {
